objects/ZSD_DMM_SAP__c.object
<CustomObject>
    <description>This object contains record for ZSD DMM SAP table</description>
    <fields>
        <fullName>Active_CJM_User__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active CJM User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CJMUser_Last_Assignment__c</fullName>
        <label>CJMUser Last Assignment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CJMUser_Millisecond__c</fullName>
        <label>CJMUser Millisecond</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CJMUser_Network_Id__c</fullName>
        <label>CJMUser Network Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Key__c</fullName>
        <label>Country Key</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Marketing_Manager__c</fullName>
        <label>District Marketing Manager</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>ZSD DMM SAP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_Key__c</columns>
        <columns>Region__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>CJMUser_Network_Id__c</columns>
        <columns>CJMUser_Last_Assignment__c</columns>
        <columns>Active_CJM_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Maciej_records</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Active_CJM_User__c</columns>
        <columns>CJMUser_Last_Assignment__c</columns>
        <columns>CJMUser_Network_Id__c</columns>
        <columns>Country_Key__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Region__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CJMUser_Network_Id__c</field>
            <operation>equals</operation>
            <value>TE345384</value>
        </filters>
        <label>Maciej  records</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ZDDM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZSD DMM SAPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>